--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -81,6 +81,8 @@ on boot
     chown cameraserver cameraserver /dev/cpuset/camera-daemon
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
+    chmod 0666 /dev/aw882xx_smartpa_l
+    chmod 0666 /dev/aw882xx_smartpa_r
 #USB controller configuration
     setprop vendor.usb.rndis.func.name "gsi"
     setprop vendor.usb.rmnet.func.name "gsi"
